    CHANGES IN pitchRx VERSION 1.1

MAJOR FIXES

  - Some variables weren't being copied to the database correctly (when using the connect argument). For example, the "gameday_link" field in the "game" table was accidently being copied as "venue".
  - In the switch to version 1.0, the count column started to be computed incorrectly. This is now fixed.
  
MINOR IMPROVEMENTS

  - A 'gameday_link' was added to all tables for better linking between tables (you can now use this instead of url for a game identifier).

    CHANGES IN pitchRx VERSION 1.0

MAJOR CHANGES

  - scrapeFX() is now deprecated. Please use the scrape() function instead. The function is built upon the R package XML2R. This change will lead to many improvements:

MAJOR IMPROVEMENTS

    (1) Easily write tables to a remote database using scrape()'s connect argument. This will lead to both better memory management and faster run-time.
    (2) Query particular game(s) of interest using the game.ids option.
    (3) Much, much easier to maintain and add support for new file types. scrape() currently supports four types of files: inning/inning_all.xml, inning/inning_hit.xml, miniscoreboard.xml, and players.xml. 
    (4) pitchRx will serve as a nice example of using the XML2R framework to build web scrapers. Another example is the bbscrapeR package -- https://github.com/cpsievert/bbscrapeR
    (5) The memory hog data(urls) is no longer included. Instead, Gameday IDs - data(gids) - will help drive the construction of urls. Also, data(fields) are now used as the "master" list of fields to when writing tables to database.
    (6) "Average" users should still find scrape() very easy to use.
    (7) Better management of variable types.

MINOR CHANGES

  - The variable "top_inning" in the "atbat" table was changed to "inning_side" and will now contain values of "top" or "bottom" (instead of "Y" or "N").
