@@ -2,12 +2,18 @@
 
 MAJOR FIXES
 
+  - Not all records in the atbat table were being returned due to an improper use of merge. This is now fixed.
+  - Records are sometimes duplicated when extracting from source. Duplicated records will now be removed.
   - Some variables weren't being copied to the database correctly (when using the connect argument). For example, the "gameday_link" field in the "game" table was accidently being copied as "venue".
   - In the switch to version 1.0, the count column started to be computed incorrectly. This is now fixed.
   
 MINOR IMPROVEMENTS
 
   - A 'gameday_link' was added to all tables for better linking between tables (you can now use this instead of url for a game identifier).
+
+NEW FEATURE
+
+  - The export function allows for robust appending of data.frames to remote tables.
 
     CHANGES IN pitchRx VERSION 1.0
 
